--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -928,7 +928,7 @@ section
 .home_slider_nav i
 {
 	line-height: 50px;
-	color: #FFFFFF;
+	color: #FF0000;
 	font-size: 22px;
 }
 .home_slider_nav:hover
